[package]
name = "openab-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tokio-tungstenite = "0.29"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
