[package]
name = "openab-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }

# Diagnostic examples (test-bot, proxy-probe, deser-test) verify Discord
# compatibility against a real serenity client. The production hub binary does
# not depend on serenity/reqwest — they live in dev-dependencies only.
[dev-dependencies]
tokio-tungstenite = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
